--- a/src/test/resources/jaxrs/expected.yaml
+++ b/src/test/resources/jaxrs/expected.yaml
@@ -12,7 +12,7 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: v1
 servers:
-- url: https://www.example.com:8080/api
+  - url: https://www.example.com:8080/api
 paths:
   /pet:
     get:
@@ -26,8 +26,8 @@ paths:
             application/xml:
               schema:
                 required:
-                - name
-                - photoUrls
+                  - name
+                  - photoUrls
                 type: object
                 properties:
                   id:
@@ -54,14 +54,14 @@ paths:
                     type: string
                     description: pet status in the store
                     enum:
-                    - available,pending,sold
+                      - available,pending,sold
                 xml:
                   name: Pet
             application/json:
               schema:
                 required:
-                - name
-                - photoUrls
+                  - name
+                  - photoUrls
                 type: object
                 properties:
                   id:
@@ -88,7 +88,7 @@ paths:
                     type: string
                     description: pet status in the store
                     enum:
-                    - available,pending,sold
+                      - available,pending,sold
                 xml:
                   name: Pet
       security: []
@@ -96,12 +96,13 @@ paths:
       summary: Update an existing pet
       description: ""
       operationId: TestResource_updatePet_put
-      parameters:
-      - name: pet
+      requestBody:
         description: Pet object that needs to be added to the store
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Pet'
         required: true
-        schema:
-          $ref: '#/components/schemas/Pet'
       responses:
         default:
           description: ""
@@ -136,12 +137,13 @@ paths:
       summary: Add a new pet to the store
       description: ""
       operationId: TestResource_addPet_post
-      parameters:
-      - name: pet
+      requestBody:
         description: Pet object that needs to be added to the store
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Pet'
         required: true
-        schema:
-          $ref: '#/components/schemas/Pet'
       responses:
         default:
           description: ""
@@ -166,11 +168,11 @@ paths:
       description: ""
       operationId: TestResource_test_get
       parameters:
-      - name: pet
-        in: query
-        description: Test pet as json string in query
-        schema:
-          $ref: '#/components/schemas/Pet'
+        - name: pet
+          in: query
+          description: Test pet as json string in query
+          schema:
+            $ref: '#/components/schemas/Pet'
       responses:
         "200":
           description: successful operation
@@ -178,8 +180,8 @@ paths:
             application/xml:
               schema:
                 required:
-                - name
-                - photoUrls
+                  - name
+                  - photoUrls
                 type: object
                 properties:
                   id:
@@ -206,14 +208,14 @@ paths:
                     type: string
                     description: pet status in the store
                     enum:
-                    - available,pending,sold
+                      - available,pending,sold
                 xml:
                   name: Pet
             application/json:
               schema:
                 required:
-                - name
-                - photoUrls
+                  - name
+                  - photoUrls
                 type: object
                 properties:
                   id:
@@ -240,9 +242,40 @@ paths:
                     type: string
                     description: pet status in the store
                     enum:
-                    - available,pending,sold
+                      - available,pending,sold
                 xml:
                   name: Pet
+      security: []
+  /pet/pets/{petName}:
+    get:
+      summary: Finds Pets by name
+      description: ""
+      operationId: TestResource_findPetByPetName_get
+      parameters:
+        - name: petName
+          in: path
+          description: petName
+          required: true
+          schema:
+            pattern: '[^/]*'
+            type: string
+      responses:
+        default:
+          description: ""
+          headers: {}
+          content:
+            ? ""
+            : schema: {}
+              examples: {}
+              encoding: {}
+          links: {}
+          $ref: '#/components/responses/'
+        "400":
+          description: Invalid pet name
+          headers: {}
+          content: {}
+          links: {}
+          $ref: '#/components/responses/'
       security: []
   /pet/{petId}:
     get:
@@ -251,16 +284,16 @@ paths:
         API error conditions
       operationId: TestResource_getPetById_get
       parameters:
-      - name: petId
-        in: path
-        description: ID of pet that needs to be fetched
-        required: true
-        schema:
-          maximum: 5
-          minimum: 1
-          pattern: '[0-9]'
-          type: integer
-          format: int64
+        - name: petId
+          in: path
+          description: ID of pet that needs to be fetched
+          required: true
+          schema:
+            maximum: 5
+            minimum: 1
+            pattern: '[0-9]'
+            type: integer
+            format: int64
       responses:
         default:
           description: ""
@@ -290,59 +323,49 @@ paths:
       description: ""
       operationId: TestResource_updatePetWithForm_post
       parameters:
-      - name: petId
-        in: path
-        description: ID of pet that needs to be updated
-        required: true
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: name
-        in: form
-        description: Updated name of the pet
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: status
-        in: form
-        description: Updated status of the pet
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: myHeader
-        in: header
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: intValue
-        in: header
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: listValue
-        in: query
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: myNestedBeanHeader
-        in: header
-        description: Header from nested bean
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: constructorInjectedHeader
-        in: header
-        description: Header injected at constructor
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: testIntegerAllowableValues
-        in: query
-        description: testIntegerAllowableValues
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: constrainedField
-        in: query
-        required: true
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: myParentHeader
-        in: header
-        description: Header from parent
-        schema:
-          $ref: '#/components/schemas/MyBean'
+        - name: petId
+          in: path
+          description: ID of pet that needs to be updated
+          required: true
+          schema:
+            $ref: '#/components/schemas/MyBean'
+        - name: myHeader
+          in: header
+          schema:
+            $ref: '#/components/schemas/MyBean'
+        - name: intValue
+          in: header
+          schema:
+            $ref: '#/components/schemas/MyBean'
+        - name: listValue
+          in: query
+          schema:
+            $ref: '#/components/schemas/MyBean'
+        - name: myNestedBeanHeader
+          in: header
+          description: Header from nested bean
+          schema:
+            $ref: '#/components/schemas/MyBean'
+        - name: constructorInjectedHeader
+          in: header
+          description: Header injected at constructor
+          schema:
+            $ref: '#/components/schemas/MyBean'
+        - name: testIntegerAllowableValues
+          in: query
+          description: testIntegerAllowableValues
+          schema:
+            $ref: '#/components/schemas/MyBean'
+        - name: constrainedField
+          in: query
+          required: true
+          schema:
+            $ref: '#/components/schemas/MyBean'
+        - name: myParentHeader
+          in: header
+          description: Header from parent
+          schema:
+            $ref: '#/components/schemas/MyBean'
       responses:
         "405":
           description: Invalid input
@@ -356,84 +379,20 @@ paths:
       description: ""
       operationId: TestResource_deletePet_delete
       parameters:
-      - name: api_key
-        in: header
-        schema:
-          type: string
-      - name: petId
-        in: path
-        description: Pet id to delete
-        required: true
-        schema:
-          type: integer
-          format: int64
+        - name: api_key
+          in: header
+          schema:
+            type: string
+        - name: petId
+          in: path
+          description: Pet id to delete
+          required: true
+          schema:
+            type: integer
+            format: int64
       responses:
         "400":
           description: Invalid pet value
-          headers: {}
-          content: {}
-          links: {}
-          $ref: '#/components/responses/'
-      security: []
-  /pet/pets/{petName}:
-    get:
-      summary: Finds Pets by name
-      description: ""
-      operationId: TestResource_findPetByPetName_get
-      parameters:
-      - name: petName
-        in: path
-        description: petName
-        required: true
-        schema:
-          pattern: '[^/]*'
-          type: string
-      responses:
-        default:
-          description: ""
-          headers: {}
-          content:
-            ? ""
-            : schema: {}
-              examples: {}
-              encoding: {}
-          links: {}
-          $ref: '#/components/responses/'
-        "400":
-          description: Invalid pet name
-          headers: {}
-          content: {}
-          links: {}
-          $ref: '#/components/responses/'
-      security: []
-  /pet/findByStatus:
-    get:
-      summary: Finds Pets by status
-      description: Multiple status values can be provided with comma seperated strings
-      operationId: TestResource_findPetsByStatus_get
-      parameters:
-      - name: status
-        in: query
-        description: Status values that need to be considered for filter
-        required: true
-        schema:
-          type: string
-          default: available
-          enum:
-          - available,pending,sold
-      responses:
-        default:
-          description: ""
-          headers: {}
-          content:
-            ? ""
-            : schema: {}
-              examples: {}
-              encoding: {}
-          links: {}
-          $ref: '#/components/responses/'
-        "400":
-          description: Invalid status value
           headers: {}
           content: {}
           links: {}
@@ -446,12 +405,12 @@ paths:
         tag1, tag2, tag3 for testing.
       operationId: TestResource_findPetsByTags_get
       parameters:
-      - name: tags
-        in: query
-        description: Tags to filter by
-        required: true
-        schema:
-          type: string
+        - name: tags
+          in: query
+          description: Tags to filter by
+          required: true
+          schema:
+            type: string
       responses:
         default:
           description: ""
@@ -477,13 +436,13 @@ paths:
       description: Returns a paginated list of all the Pets.
       operationId: TestResource_findAllPaginated_get
       parameters:
-      - name: pageNumber
-        in: query
-        description: pageNumber
-        required: true
-        schema:
-          type: integer
-          format: int32
+        - name: pageNumber
+          in: query
+          description: pageNumber
+          required: true
+          schema:
+            type: integer
+            format: int32
       responses:
         default:
           description: ""
@@ -502,68 +461,34 @@ paths:
           links: {}
           $ref: '#/components/responses/'
       security: []
-  /pet/{petId}/testInjectParam:
-    post:
-      summary: Updates a pet in the store with form data
-      description: ""
-      operationId: TestResource_updatePetWithFormViaInjectParam_post
+  /pet/findByStatus:
+    get:
+      summary: Finds Pets by status
+      description: Multiple status values can be provided with comma seperated strings
+      operationId: TestResource_findPetsByStatus_get
       parameters:
-      - name: petId
-        in: path
-        description: ID of pet that needs to be updated
-        required: true
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: name
-        in: form
-        description: Updated name of the pet
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: status
-        in: form
-        description: Updated status of the pet
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: myHeader
-        in: header
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: intValue
-        in: header
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: listValue
-        in: query
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: myNestedBeanHeader
-        in: header
-        description: Header from nested bean
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: constructorInjectedHeader
-        in: header
-        description: Header injected at constructor
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: testIntegerAllowableValues
-        in: query
-        description: testIntegerAllowableValues
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: constrainedField
-        in: query
-        required: true
-        schema:
-          $ref: '#/components/schemas/MyBean'
-      - name: myParentHeader
-        in: header
-        description: Header from parent
-        schema:
-          $ref: '#/components/schemas/MyBean'
+        - name: status
+          in: query
+          description: Status values that need to be considered for filter
+          required: true
+          schema:
+            type: string
+            default: available
+            enum:
+              - available,pending,sold
       responses:
-        "405":
-          description: Invalid input
+        default:
+          description: ""
+          headers: {}
+          content:
+            ? ""
+            : schema: {}
+              examples: {}
+              encoding: {}
+          links: {}
+          $ref: '#/components/responses/'
+        "400":
+          description: Invalid status value
           headers: {}
           content: {}
           links: {}
@@ -590,6 +515,63 @@ paths:
       firstExtension:
         extensionName2: extensionValue2
         extensionName1: extensionValue1
+  /pet/{petId}/testInjectParam:
+    post:
+      summary: Updates a pet in the store with form data
+      description: ""
+      operationId: TestResource_updatePetWithFormViaInjectParam_post
+      parameters:
+        - name: petId
+          in: path
+          description: ID of pet that needs to be updated
+          required: true
+          schema:
+            $ref: '#/components/schemas/MyBean'
+        - name: myHeader
+          in: header
+          schema:
+            $ref: '#/components/schemas/MyBean'
+        - name: intValue
+          in: header
+          schema:
+            $ref: '#/components/schemas/MyBean'
+        - name: listValue
+          in: query
+          schema:
+            $ref: '#/components/schemas/MyBean'
+        - name: myNestedBeanHeader
+          in: header
+          description: Header from nested bean
+          schema:
+            $ref: '#/components/schemas/MyBean'
+        - name: constructorInjectedHeader
+          in: header
+          description: Header injected at constructor
+          schema:
+            $ref: '#/components/schemas/MyBean'
+        - name: testIntegerAllowableValues
+          in: query
+          description: testIntegerAllowableValues
+          schema:
+            $ref: '#/components/schemas/MyBean'
+        - name: constrainedField
+          in: query
+          required: true
+          schema:
+            $ref: '#/components/schemas/MyBean'
+        - name: myParentHeader
+          in: header
+          description: Header from parent
+          schema:
+            $ref: '#/components/schemas/MyBean'
+      responses:
+        "405":
+          description: Invalid input
+          headers: {}
+          content: {}
+          links: {}
+          $ref: '#/components/responses/'
+      security: []
   /pet/test/testingArrayResponse:
     get:
       summary: testingArrayResponse
@@ -635,8 +617,8 @@ components:
         namespace: http://com.wordnik/sample/model/category
     Pet:
       required:
-      - name
-      - photoUrls
+        - name
+        - photoUrls
       type: object
       properties:
         id:
@@ -663,7 +645,7 @@ components:
           type: string
           description: pet status in the store
           enum:
-          - available,pending,sold
+            - available,pending,sold
       xml:
         name: Pet
     PetId:
@@ -699,7 +681,7 @@ components:
           type: string
     MyBean:
       required:
-      - constrainedField
+        - constrainedField
       type: object
       properties:
         myParentheader:
